--- a/vc2013_wx3/shadecalc/help/index.html
+++ b/vc2013_wx3/shadecalc/help/index.html
@@ -1,27 +1,43 @@
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN"
+  "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
-<body>
-<h3>SAM Shading Analysis Tool</h3>
-<hr>
-<center><img src="ivanhoe.png"></center>
-<hr>
-Shortcut keys:<br>
-<ul>
-<li>Arrow keys offset the scene from center
-<li>I zooms in (increases the scale)
-<li>O zooms out
-<li>C centers the scene
-<li>Z sets view mode to side view
-<li>T sets view mode to top view
-<li>S sets view mode to 3D view
-<li>A makes all objects visible
-</ul>
-<br>
-
-Mouse buttons
-<ul>
-<li>Left in top and side views resize and moves objects
-<li>Left in 3D view moves through azimuths and altitudes
-<li>Wheel zooms in and out
-</ul>
-</body>
+<head>
+<title>SAM Shading Analysis Tool</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="helpman_settings.js"></script>
+<script type="text/javascript" src="helpman_navigation.js"></script>
+<script type="text/javascript" src="shading_contextids.js"></script>
+<script type="text/javascript">
+<!--
+    var defaulttopic="overview.htm";
+    var query = window.location.search.substring(1).replace(/:|&#58;|&#x3a;|\//g,"");
+    if (query != "") {
+       defaulttopic = query + window.location.hash;
+       if (typeof(hmGetContextId) != "undefined") {
+         var tmpCntx = hmGetContextId(query);
+         if (tmpCntx != "") defaulttopic = tmpCntx;
+       }
+    }
+document.write('<frameset cols="20%,*" frameborder="0" framespacing="1">');
+if (document.getElementById) {
+  document.write('<frame name="hmnavigation" src="shading_content.htm" title="Navigation frame">'); }
+else {
+  document.write('<frame name="hmnavigation" src="shading_content.htm" title="Navigation frame">'); }
+document.write('<frame name="hmcontent" src="' + defaulttopic + '" title="Content frame">');
+document.write('</frameset>');
+//-->
+</script>
+</head>
+<noscript>
+  <frameset cols="20%,*" frameborder="0" framespacing="1">
+    <frame name="hmnavigation" src="shading_content.htm" title="Navigation frame">
+    <frame name="hmcontent" src="overview.htm" title="Content frame">
+    <noframes>
+      This page requires frames<br><a href="shading_content.htm">Click here to view the table of contents without frames</a>
+    </noframes>
+  </frameset>
+</noscript>
 </html>
+
