Revised help system for beta release

--- a/vc2013_wx3/shadecalc/help/analyze.htm
+++ b/vc2013_wx3/shadecalc/help/analyze.htm
@@ -47,7 +47,7 @@
 <p class="p_Item"><span class="f_Item">Shade Fraction</span></p>
 <p class="p_Description"><span class="f_Description">Choose this option to generate tables of shade fractions when you click </span><span class="f_CHUIElement">Diurnal analysis</span><span class="f_Description">. The shade fraction is the ratio of an active surface's shaded area to its total area.</span></p>
 <p class="p_Item"><span class="f_Item">Beam Shading Factor</span></p>
-<p class="p_Description"><span class="f_Description">Choose this option ot generate tables of beam shading factors when you click </span><span class="f_CHUIElement">Diurnal analysis</span><span class="f_Description">. The beam shading factor is one minus the shade fraction.</span></p>
+<p class="p_Description"><span class="f_Description">Choose this option to generate tables of beam shading factors when you click </span><span class="f_CHUIElement">Diurnal analysis</span><span class="f_Description">. The beam shading factor is one minus the shade fraction.</span></p>
 
 </td></tr></table>
 
