--- a/vc2013_wx3/shadecalc/help/create.htm
+++ b/vc2013_wx3/shadecalc/help/create.htm
@@ -40,7 +40,7 @@
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
 <p>The Create list allows you to <a href="shading-objects.htm" class="topiclink">add shading objects</a> and <a href="active-surface.htm" class="topiclink">active surface objects</a> to the scene.</p>
 <h2 class="p_Heading2" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading2">Active Surface</span></h2>
-<p class="p_Text"><span class="f_Text">An active surface is a surface that is shaded by the shading objects. For photovoltaic systems, the active surface is the photovoltaic array. A scene can have up to four different active surfaces. Active surfaces can be rectangular or triangular in shape.</span></p>
+<p class="p_Text"><span class="f_Text">An active surface is a surface that is shaded by the shading objects. For photovoltaic systems, the active surface is the photovoltaic array. Active surfaces can be rectangular or triangular in shape.</span></p>
 <p class="p_ImageCaption"><span class="f_ImageCaption">A Building with Two Rectangular Active Surfaces in 3D Scene View </span><br />
 <span class="f_ImageCaption">and Properties of the South Facing Surface</span></p>
 <p class="p_ImageCaption"><img src="ss-properties-active-surface.png" width="495" height="232" alt="ss-properties-active-surface" style="border:none" /></p>
@@ -112,34 +112,24 @@
 <p class="p_Description"><span class="f_Description">The angle from the horizontal of the two roof surfaces as shown in the image above. A gable would have a pitch angle of 90 degrees.</span></p>
 <p class="p_Item"><span class="f_Item">Color</span></p>
 <p class="p_Description"><span class="f_Description">Color used to render the roof in 3D scene, bird's eye, and elevations view. Does not affect shade analysis. Type a color name to change the color.</span></p>
-<h2 class="p_Heading2" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading2">Tree, round</span></h2>
-<p class="p_Text"><span class="f_Text">The round tree shading object represents a tree with a round crown.</span></p>
-<p class="p_ImageCaption"><span class="f_ImageCaption">A Round Tree in 3D Scene View and its Properties</span></p>
-<p class="p_ImageCaption"><img src="ss-properties-tree-round.png" width="434" height="357" alt="ss-properties-tree-round" style="border:none" /></p>
+<h2 class="p_Heading2" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading2">Tree</span></h2>
+<p class="p_Text"><span class="f_Text">The tree shading object can be used to represent a tree with a variety of crown shapes.</span></p>
+<p class="p_ImageCaption"><span class="f_ImageCaption">Three &nbsp;Trees in 3D Scene View and the Conical Tree Properties</span></p>
+<p class="p_ImageCaption"><img src="ss-properties-tree.png" width="389" height="259" alt="ss-properties-tree" style="border:none" /></p>
 <p class="p_Item"><span class="f_Item">Name</span></p>
 <p class="p_Description"><span class="f_Description">Descriptive name for the tree to you identify it. Does not affect shade analysis.</span></p>
 <p class="p_Item"><span class="f_Item">X, Y</span></p>
 <p class="p_Description"><span class="f_Description">The X and Y coordinates of the center of the base of the tree.</span></p>
 <p class="p_Item"><span class="f_Item">Diameter</span></p>
-<p class="p_Description"><span class="f_Description">The diameter of the tree's crown at its widest point.</span></p>
-<p class="p_Item"><span class="f_Item">Height</span></p>
-<p class="p_Description"><span class="f_Description">The distance from the base of the tree truck to the top of the crown.</span></p>
-<h2 class="p_Heading2" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading2">Tree, conical</span></h2>
-<p class="p_Text"><span class="f_Text">The conical tree shading object can be used to represent a tree with a variety of crown shapes.</span></p>
-<p class="p_ImageCaption"><span class="f_ImageCaption">Three Conical Trees in 3D Scene View and the Conical Tree Properties</span></p>
-<p class="p_ImageCaption"><img src="ss-properties-tree-conical.png" width="503" height="222" alt="ss-properties-tree-conical" style="border:none" /></p>
-<p class="p_Item"><span class="f_Item">Name</span></p>
-<p class="p_Description"><span class="f_Description">Descriptive name for the tree to you identify it. Does not affect shade analysis.</span></p>
-<p class="p_Item"><span class="f_Item">X, Y</span></p>
-<p class="p_Description"><span class="f_Description">The X and Y coordinates of the center of the base of the tree.</span></p>
-<p class="p_Item"><span class="f_Item">Diameter</span></p>
-<p class="p_Description"><span class="f_Description">The diameter of the bottom of the tree's crown.</span></p>
+<p class="p_Description"><span class="f_Description">For the conical shape, the diameter of the bottom of the tree's crown. For the rounded shape, the diameter of the cylindrical portion of the crown.</span></p>
 <p class="p_Item"><span class="f_Item">Height</span></p>
 <p class="p_Description"><span class="f_Description">The distance from the base of the tree truck to the top of the crown.</span></p>
 <p class="p_Item"><span class="f_Item">Top Diameter</span></p>
 <p class="p_Description"><span class="f_Description">The diameter of the top of the tree's crown.</span></p>
 <p class="p_Item"><span class="f_Item">Trunk Height</span></p>
 <p class="p_Description"><span class="f_Description">The distance from the base of the tree to the bottom of the crown.</span></p>
+<p class="p_Item"><span class="f_Item">Shape</span></p>
+<p class="p_Description"><span class="f_Description">The crown shape. </span><span class="f_CHUIElement">Conical</span><span class="f_Description"> is a versatile shape that you can use for crown shapes like conical, vase, and cylindrical. </span><span class="f_CHUIElement">Rounded</span><span class="f_Description"> is for a crown with a rounded top and bottom.</span></p>
 
 </td></tr></table>
 
