--- a/vc2013_wx3/shadecalc/help/shading_content.htm
+++ b/vc2013_wx3/shadecalc/help/shading_content.htm
@@ -68,59 +68,63 @@
   <ul id="toc" style="list-style-type:none;display:block;padding-left:0">
 <li class="heading1" id="i1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a1" href="overview.htm" target="hmcontent"><span class="heading1" id="s1">Overview</span></a>
 </li>
-<li class="heading1" id="i2" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a2" href="how-to.htm" target="hmcontent"><span class="heading1" id="s2" ondblclick="return dblclicked(this)">How-To</span></a>
-<ul id="ul2" style="list-style-type:none">
-<li class="heading2" id="i2.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.1" href="define-location.htm" target="hmcontent"><span class="heading2" id="s2.1">Define the scene location</span></a>
+<li class="heading1" id="i2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a2" href="beta.htm" target="hmcontent"><span class="heading1" id="s2">Beta Test Information</span></a>
 </li>
-<li class="heading2" id="i2.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.2" href="underlay.htm" target="hmcontent"><span class="heading2" id="s2.2">Use an image underlay</span></a>
+<li class="heading1" id="i3" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a3" href="how-to.htm" target="hmcontent"><span class="heading1" id="s3" ondblclick="return dblclicked(this)">How-To</span></a>
+<ul id="ul3" style="list-style-type:none">
+<li class="heading2" id="i3.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.1" href="define-location.htm" target="hmcontent"><span class="heading2" id="s3.1">Define the scene location</span></a>
 </li>
-<li class="heading2" id="i2.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.3" href="shading-objects.htm" target="hmcontent"><span class="heading2" id="s2.3">Add shading objects</span></a>
+<li class="heading2" id="i3.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.2" href="underlay.htm" target="hmcontent"><span class="heading2" id="s3.2">Use an image underlay</span></a>
 </li>
-<li class="heading2" id="i2.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.4" href="active-surface.htm" target="hmcontent"><span class="heading2" id="s2.4">Add active surface objects</span></a>
+<li class="heading2" id="i3.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.3" href="shading-objects.htm" target="hmcontent"><span class="heading2" id="s3.3">Add shading objects</span></a>
 </li>
-<li class="heading2" id="i2.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.5" href="change-view.htm" target="hmcontent"><span class="heading2" id="s2.5">Change the view</span></a>
+<li class="heading2" id="i3.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.4" href="active-surface.htm" target="hmcontent"><span class="heading2" id="s3.4">Add active surface objects</span></a>
 </li>
-<li class="heading2" id="i2.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.6" href="zoom-pan.htm" target="hmcontent"><span class="heading2" id="s2.6">Zoom and pan the scene</span></a>
+<li class="heading2" id="i3.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.5" href="change-view.htm" target="hmcontent"><span class="heading2" id="s3.5">Change the view</span></a>
 </li>
-<li class="heading2" id="i2.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.7" href="select.htm" target="hmcontent"><span class="heading2" id="s2.7">Select an object</span></a>
+<li class="heading2" id="i3.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.6" href="zoom-pan.htm" target="hmcontent"><span class="heading2" id="s3.6">Zoom and pan the scene</span></a>
 </li>
-<li class="heading2" id="i2.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.8" href="move.htm" target="hmcontent"><span class="heading2" id="s2.8">Move objects</span></a>
+<li class="heading2" id="i3.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.7" href="select.htm" target="hmcontent"><span class="heading2" id="s3.7">Select an object</span></a>
 </li>
-<li class="heading2" id="i2.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.9" href="resize.htm" target="hmcontent"><span class="heading2" id="s2.9">Resize objects</span></a>
+<li class="heading2" id="i3.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.8" href="move.htm" target="hmcontent"><span class="heading2" id="s3.8">Move objects</span></a>
 </li>
-<li class="heading2" id="i2.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.10" href="rotate.htm" target="hmcontent"><span class="heading2" id="s2.10">Rotate objects</span></a>
+<li class="heading2" id="i3.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.9" href="resize.htm" target="hmcontent"><span class="heading2" id="s3.9">Resize objects</span></a>
 </li>
-<li class="heading2" id="i2.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.11" href="delete.htm" target="hmcontent"><span class="heading2" id="s2.11">Delete and copy objects</span></a>
+<li class="heading2" id="i3.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.10" href="rotate.htm" target="hmcontent"><span class="heading2" id="s3.10">Rotate objects</span></a>
 </li>
-<li class="heading2" id="i2.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.12" href="colors.htm" target="hmcontent"><span class="heading2" id="s2.12">Change object colors</span></a>
+<li class="heading2" id="i3.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.11" href="delete.htm" target="hmcontent"><span class="heading2" id="s3.11">Delete and copy objects</span></a>
 </li>
-<li class="heading2" id="i2.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.13" href="generate-data.htm" target="hmcontent"><span class="heading2" id="s2.13">Generate shading data</span></a>
+<li class="heading2" id="i3.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.12" href="colors.htm" target="hmcontent"><span class="heading2" id="s3.12">Change object colors</span></a>
 </li>
-<li class="heading2" id="i2.14" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.14" href="export.htm" target="hmcontent"><span class="heading2" id="s2.14">Export shade data</span></a>
+<li class="heading2" id="i3.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.13" href="generate-data.htm" target="hmcontent"><span class="heading2" id="s3.13">Generate shading data</span></a>
 </li>
-<li class="heading2" id="i2.15" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.15" href="sam.htm" target="hmcontent"><span class="heading2" id="s2.15">Use shade data in SAM</span></a>
+<li class="heading2" id="i3.14" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.14" href="export.htm" target="hmcontent"><span class="heading2" id="s3.14">Export shade data</span></a>
+</li>
+<li class="heading2" id="i3.15" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.15" href="sam.htm" target="hmcontent"><span class="heading2" id="s3.15">Use shade data in SAM</span></a>
+</li>
+<li class="heading2" id="i3.16" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.16" href="proxy.htm" target="hmcontent"><span class="heading2" id="s3.16">Configure proxy server</span></a>
 </li>
 </ul>
 </li>
-<li class="heading1" id="i3" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a3" href="reference.htm" target="hmcontent"><span class="heading1" id="s3" ondblclick="return dblclicked(this)">Reference</span></a>
-<ul id="ul3" style="list-style-type:none">
-<li class="heading2" id="i3.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.1" href="open-save.htm" target="hmcontent"><span class="heading2" id="s3.1">Open and Save</span></a>
+<li class="heading1" id="i4" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a4" href="reference.htm" target="hmcontent"><span class="heading1" id="s4" ondblclick="return dblclicked(this)">Reference</span></a>
+<ul id="ul4" style="list-style-type:none">
+<li class="heading2" id="i4.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.1" href="open-save.htm" target="hmcontent"><span class="heading2" id="s4.1">Open and Save</span></a>
 </li>
-<li class="heading2" id="i3.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.2" href="location.htm" target="hmcontent"><span class="heading2" id="s3.2">Location</span></a>
+<li class="heading2" id="i4.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.2" href="location.htm" target="hmcontent"><span class="heading2" id="s4.2">Location</span></a>
 </li>
-<li class="heading2" id="i3.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.3" href="create.htm" target="hmcontent"><span class="heading2" id="s3.3">Create (Shape Reference)</span></a>
+<li class="heading2" id="i4.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.3" href="create.htm" target="hmcontent"><span class="heading2" id="s4.3">Create (Shape Reference)</span></a>
 </li>
-<li class="heading2" id="i3.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.4" href="3d-scene.htm" target="hmcontent"><span class="heading2" id="s3.4">3D Scene</span></a>
+<li class="heading2" id="i4.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.4" href="3d-scene.htm" target="hmcontent"><span class="heading2" id="s4.4">3D Scene</span></a>
 </li>
-<li class="heading2" id="i3.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.5" href="birds-eye.htm" target="hmcontent"><span class="heading2" id="s3.5">Bird's Eye</span></a>
+<li class="heading2" id="i4.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.5" href="birds-eye.htm" target="hmcontent"><span class="heading2" id="s4.5">Bird's Eye</span></a>
 </li>
-<li class="heading2" id="i3.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.6" href="elevations.htm" target="hmcontent"><span class="heading2" id="s3.6">Elevations</span></a>
+<li class="heading2" id="i4.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.6" href="elevations.htm" target="hmcontent"><span class="heading2" id="s4.6">Elevations</span></a>
 </li>
-<li class="heading2" id="i3.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.7" href="analyze.htm" target="hmcontent"><span class="heading2" id="s3.7">Analyze</span></a>
+<li class="heading2" id="i4.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.7" href="analyze.htm" target="hmcontent"><span class="heading2" id="s4.7">Analyze</span></a>
 </li>
-<li class="heading2" id="i3.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.8" href="shortcuts.htm" target="hmcontent"><span class="heading2" id="s3.8">Keyboard Shortcuts</span></a>
+<li class="heading2" id="i4.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.8" href="shortcuts.htm" target="hmcontent"><span class="heading2" id="s4.8">Shortcuts</span></a>
 </li>
-<li class="heading2" id="i3.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.9" href="file-types.htm" target="hmcontent"><span class="heading2" id="s3.9">File Types</span></a>
+<li class="heading2" id="i4.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.9" href="file-types.htm" target="hmcontent"><span class="heading2" id="s4.9">File Types</span></a>
 </li>
 </ul>
 </li>
