--- a/vc2013_wx3/shadecalc/help/select.htm
+++ b/vc2013_wx3/shadecalc/help/select.htm
@@ -43,6 +43,9 @@
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 3px 24px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_Step">Click the object,</span></td></tr></table></div><p class="p_StepNoNumber"><span class="f_StepNoNumber">or</span></p>
 <p class="p_StepNoNumber"><span class="f_StepNoNumber">click the object's name in the object list.</span></p>
 <p class="p_StepNoNumber"><span class="f_StepNoNumber">The selected object will be highlighted in the objects list, and will be indicated by a magenta mask or handles, depending on the view. Also, the object's properties appear when it is selected.</span></p>
+<p class="p_StepNoNumber"><span class="f_StepNoNumber">If there are multiple objects at your mouse pointer, click once for each object to cycle through the objects.</span></p>
+<p class="p_ImageCaption"><span class="f_ImageCaption">Selecting an Object</span></p>
+<p class="p_ImageCaption"><img src="ss-select.png" width="523" height="438" alt="ss-select" style="border:none" /></p>
 
 </td></tr></table>
 
