--- a/deploy/runtime/help/html/weather_manage_folders.htm
+++ b/deploy/runtime/help/html/weather_manage_folders.htm
@@ -38,7 +38,7 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p class="p_Text"><span class="f_Text">When you install SAM, it creates a default weather file folder in the SAM installation folder (C:\SAM\SAM 2014.1.14\weather by default in Windows). The default folder contains the complete set of TMY2 files from the NSRDB database, a set of typical wind resource files, and a few sample weather files in other formats.</span></p>
+<p class="p_Text"><span class="f_Text">When you install SAM, it creates a default weather file folder in the SAM installation folder (C:\SAM\SAM NT Alpha\weather by default in Windows). The default folder contains the complete set of TMY2 files from the NSRDB database, a set of typical wind resource files, and a few sample weather files in other formats.</span></p>
 <p class="p_Text"><span class="f_Text">Those files appear in the weather file list on the Location and Resource, Ambient Conditions, or Wind Resource page:</span></p>
 <p class="p_Text"><img src="ss_climate-filelist.png" width="600" height="173" alt="SS_Climate-FileList" style="border:none" /></p>
 <p class="p_Text"><span class="f_Text">SAM can read weather files stored in any folder on your computer. Because the default folder can be difficult to find, we recommend that you create an easy-to-find folder to store weather files that you download from the web, create with the <a href="weather_create_tmy3.htm" class="topiclink">TMY3 Creator</a>, or from another source.</span></p>
